Create simple markup

--- a/app/assets/index.pug
+++ b/app/assets/index.pug
@@ -41,9 +41,29 @@ block main
       .container
         .row
           .col-lg-8.offset-lg-2
-            h2.heading.heading--clear.section__heading.home-section__heading Heading
+            h2.heading.heading--clear.section__heading.home-section__heading Section 1
             p.text.text--clear.section__subtitle.home-section__subtitle Lorem ipsum dolor
-            p.text.text--clear.section__text.home-section__text Just then her head struck against the roof of the hall: in fact she was now more than nine feet high, and she at once took up the little golden key and hurried off to the garden door.
+        button.button.button--clear.button--outline.scroll-down(type='button') Scroll
+    section.section.section--base.home-section.text-align.text-align--center
+      .container
+        .row
+          .col-lg-8.offset-lg-2
+            h2.heading.heading--clear.section__heading.home-section__heading Section 2
+            p.text.text--clear.section__subtitle.home-section__subtitle Lorem ipsum dolor
+        button.button.button--clear.button--outline.scroll-down(type='button') Scroll
+    section.section.section--base.home-section.text-align.text-align--center
+      .container
+        .row
+          .col-lg-8.offset-lg-2
+            h2.heading.heading--clear.section__heading.home-section__heading Section 3
+            p.text.text--clear.section__subtitle.home-section__subtitle Lorem ipsum dolor
+        button.button.button--clear.button--outline.scroll-down(type='button') Scroll
+    section.section.section--base.home-section.text-align.text-align--center
+      .container
+        .row
+          .col-lg-8.offset-lg-2
+            h2.heading.heading--clear.section__heading.home-section__heading Section 4
+            p.text.text--clear.section__subtitle.home-section__subtitle Lorem ipsum dolor
   footer.page-footer
     .container
       p.text.text--clear.copyright-text &copy; Ethcrawford 2018
