--- a/app/styles/default.styl
+++ b/app/styles/default.styl
@@ -30,6 +30,12 @@
   +composer(section)
     +composer(section)
       .section
+        position: relative
+        top: 0
+        right: 0
+        bottom: 0
+        left: 0
+        overflow: hidden
         padding-top: rem(300px)
         padding-bottom: rem(300px)
         +composer(section_heading)
