Add section border

--- a/app/assets/index.pug
+++ b/app/assets/index.pug
@@ -37,28 +37,28 @@ block main
           a.link.link--clear.menu-list__link(href='#') Five
     .slide-out-menu-overlay
   main.main
-    section.section.section--base.home-section.text-align.text-align--center
+    section.section.section--base.section--border-bottom.home-section.text-align.text-align--center
       .container
         .row
           .col-lg-8.offset-lg-2
             h2.heading.heading--clear.section__heading.home-section__heading Section 1
             p.text.text--clear.section__subtitle.home-section__subtitle Lorem ipsum dolor
         button.button.button--clear.button--outline.scroll-down(type='button') Scroll
-    section.section.section--base.home-section.text-align.text-align--center
+    section.section.section--base.section--border-bottom.home-section.text-align.text-align--center
       .container
         .row
           .col-lg-8.offset-lg-2
             h2.heading.heading--clear.section__heading.home-section__heading Section 2
             p.text.text--clear.section__subtitle.home-section__subtitle Lorem ipsum dolor
         button.button.button--clear.button--outline.scroll-down(type='button') Scroll
-    section.section.section--base.home-section.text-align.text-align--center
+    section.section.section--base.section--border-bottom.home-section.text-align.text-align--center
       .container
         .row
           .col-lg-8.offset-lg-2
             h2.heading.heading--clear.section__heading.home-section__heading Section 3
             p.text.text--clear.section__subtitle.home-section__subtitle Lorem ipsum dolor
         button.button.button--clear.button--outline.scroll-down(type='button') Scroll
-    section.section.section--base.home-section.text-align.text-align--center
+    section.section.section--base.section--border-bottom.home-section.text-align.text-align--center
       .container
         .row
           .col-lg-8.offset-lg-2
