--- a/app/styles/common.styl
+++ b/app/styles/common.styl
@@ -11,3 +11,6 @@
     .sprite-icon
       sprite-image()
       background-repeat: no-repeat
+  .section
+    &--border-bottom
+      border-bottom: rem(1px) base_color solid
