--- a/app/styles/special.styl
+++ b/app/styles/special.styl
@@ -128,3 +128,8 @@
         sprite-position(sprite-marker)
         sprite-width(sprite-marker)
         sprite-height(sprite-marker)
+  .scroll-down
+    position: absolute
+    bottom: 30px
+    left: 50%
+    transform: translate(-50%)
