--- a/app/styles/variables/_modular-grid.styl
+++ b/app/styles/variables/_modular-grid.styl
@@ -55,7 +55,7 @@ column-list-sm = 1 2 3 4 5 6 7 8 9 10 11 12 // default: [1 2 3 4 5 6 7 8 9 10 11
 column-md = false // requires: row, default: true
 column-list-md = 1 2 3 4 5 6 7 8 9 10 11 12 // default: [1 2 3 4 5 6 7 8 9 10 11 12] depends on columns-number
 //
-column-lg = true // requires: row, default: true
+column-lg = false // requires: row, default: true
 column-list-lg = 1 2 3 4 5 6 7 8 9 10 11 12 // default: [1 2 3 4 5 6 7 8 9 10 11 12] depends on columns-number
 //
 column-xl = false // requires: row, default: true
