--- a/app/styles/variables/_initiator.styl
+++ b/app/styles/variables/_initiator.styl
@@ -28,7 +28,7 @@ heading_clear = true
 text_clear = true
 link_clear = true
 list_clear = true
-image_auto = true
+image_auto = false
 button_clear = true
 
 ///* Default level
@@ -38,12 +38,12 @@ default = true
 button = true
 button_full-size = false
 button_outline = true
-button_rounded = true
+button_rounded = false
 inline-list = true
 section = true
 section_heading = true
 section_subtitle = true
-section_text = true
+section_text = false
 
 ///* Common level
 //----------------------------------------------*/
@@ -67,12 +67,12 @@ sprite-icon_special = false
 
 ///* Animation level
 //----------------------------------------------*/
-animation = true
+animation = false
 //
 
 ///* Animator level
 //----------------------------------------------*/
-animator = true
+animator = false
 //
 
 ///* Switch level
