--- a/app/styles/switch.styl
+++ b/app/styles/switch.styl
@@ -12,6 +12,9 @@
         padding: rem(24px) 0
         background-color: white_color
         box-shadow: 0 rem(1px) rem(10px) rgba(0, 0, 0, .15)
+    .scroll-up
+      &--active
+        display: block
   +composer(slide-out-menu_open)
     .slide-out-menu
       &--open
